ubo_app/services/080-docker/assets/envoy.yaml
static_resources:
  listeners:
    - name: grpc_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50052
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: grpc
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_service
                      domains: ['*']
                      routes:
                        - match:
                            prefix: '/'
                          route:
                            cluster: grpc_service_cluster
                            timeout: 0s
                          typed_per_filter_config:
                            envoy.filters.http.cors:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: '.*'
                              allow_methods: 'GET,PUT,DELETE,POST,OPTIONS'
                              allow_headers: 'Content-Type,Authorization,X-User-Agent,X-Grpc-Web' # Added X-Grpc-Web
                              expose_headers: 'Content-Type,Authorization'
                              allow_credentials: { value: true }
                http_filters:
                  - name: envoy.filters.http.cors # Ensure CORS filter comes first
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: grpc_service_cluster
      connect_timeout: 5s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: grpc_service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 50051
      http2_protocol_options: {}
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          grpc_health_check: {}
          no_traffic_interval: 5s
